# scarab

./: .env  .gitignore  CONTRIBUTING.md  README.md  TECHNICAL.md  docker-compose.yml  install.sh  pyproject.toml  scarab.conf  scarab.conf.example
certs/: generate.sh
clients/: android.md  ios.md  macos.md  windows.md
installers/: build_dmg.sh  install_client.ps1  install_client.sh  install_server.sh
scarab/: cli.py  config.py  logger.py
scarab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scarab/core/: local_handler.py  proxy_manager.py  remote_handler.py  sleep_handler.py
scarab/downloader/: aria2_client.py
scarab/notifier/: ntfy_client.py
scarab/orchestrator/: scorer.py  server.py
scarab/proxy/: addon.py  inspector.py
scarab/runtime/: background.py  doctor.py  menubar.py  mode.py
scarab/setup/: cert_manager.py  dependencies.py
scarab/transfer/: auto_push.py  netdrive.py
