[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scarab"
version = "0.1.0"
dependencies = [
    "mitmproxy>=10.0",
    "aria2p",
    "fastapi",
    "uvicorn",
    "apscheduler",
    "httpx",
    "rich",
    "rumps"
]

[project.scripts]
scarab = "scarab.cli:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = 'py311'
