[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scarab"
version = "0.1.0"
dependencies = [
    "mitmproxy>=10.0",
    "aria2p",
    "fastapi",
    "uvicorn[standard]",
    "apscheduler>=3.10",
    "httpx",
    "rich",
    "psutil",
    "rumps"
]

[tool.setuptools.packages.find]
include = ["scarab*"]

[project.scripts]
scarab = "scarab.cli:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = 'py311'
