[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scarab"
version = "0.1.0"
dependencies = [
    "mitmproxy>=10.0",
    "fastapi",
    "uvicorn[standard]",
    "apscheduler>=3.10",
    "httpx",
    "rich",
    "psutil",
    "rumps",
    "tomli-w",
    "click"
]

[tool.setuptools.packages.find]
include = ["scarab*"]

[project.scripts]
scarab = "scarab.cli:cli"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = 'py311'
